@@ -53,8 +53,7 @@
 # * REISERFS    Compile support for parts of LILO on ReiserFS.
 #               Requires header files for kernel 2.4.0test8 or later.
 # * REWRITE_TABLE Enable rewriting the partition table at boot time.
-# * SOLO_CHAIN  Assemble all chain-loader functions into 'chain.b', 
-#               eliminating the need for 'os2_d.b'.
+# * SOLO_CHAIN  Assemble all chain-loader functions into 'chain.b'.
 #   SUSPEND=    Modify 'vmdefault' action if this partition type on C: drive
 #               is marked active; (Dell suspend partition is -DSUSPEND=0x84).
 #   USE_TMPDIR  Create temporary devices in $TMPDIR if set
